--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div class="muted">Dictionary source</div>
         <div style="height:6px"></div>
         <div class="controls">
-          <button class="btn" id="tryFetchBtn" type="button">Load <code>assets/words.txt</code></button>
+          <button class="btn" id="tryFetchBtn" type="button">Load <code>assets/Words.txt</code></button>
           <span class="muted small">or</span>
           <input type="file" id="fileInput" accept=".txt" />
         </div>
